--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 </head>
 
 <body>
+
+    <!-- <header>
+    <h1 class="h1">periodic table</h1>
+</header> -->
+
     <h1>periodic table</h1>
+
+
+
+
     <div id="container">
 
         <table border="1">
-
-
             <tr id="TextRow">
                 <td class="number" style="color: aliceblue;">0</td>
                 <td class="number">1</td>
@@ -122,7 +129,7 @@
                 <td style="background-color: yellow;">Ti
                     <span>Titanium</span>
                 </td>
-                <td style="background-color: yellow ; line-height: 20px;" >V
+                <td style="background-color: yellow ; line-height: 20px;">V
                     <span>,,.....Vanadium..</span>
                 </td>
                 <td style="background-color: yellow;">Cr
@@ -259,7 +266,7 @@
                 <td style="background-color: lightgreen;">Sm <span>Samarium</span></td>
                 <td style="background-color: lightgreen;">Eu <span>Europium</span></td>
                 <td style="background-color: lightgreen;">gd <span>Gadolinium</span></td>
-                <td style="background-color: lightgreen;">Tb <span>terbium</span></td> 
+                <td style="background-color: lightgreen;">Tb <span>terbium</span></td>
                 <td style="background-color: lightgreen;">Dy <span>Dysprosium</span></td>
                 <td style="background-color: lightgreen;">Ho <span>Holmium</span></td>
                 <td style="background-color: lightgreen;">Er <span>Erbium</span></td>
@@ -289,5 +296,18 @@
             </tr>
         </table>
     </div>
+
+
+
+
+
+
+    <footer>
+        <h1 class="h2">This is my all projects <a href="https://abdul-rafaycodeder.github.io/simpal_html_CV_3/">HTML-CV</a> <a href="https://abdul-rafaycodeder.github.io/simple-EV-scooter-website/">HTML - Multiple pages website</a> <a href="https://abdul-rafaycodeder.github.io/HTML-CSS-Portfolio-Website-main-1/">HTML_CSS Portfolio Website</a> <a href="https://rafay-website.surge.sh/">rafay-postfolio-Website</a> </h1>
+
+        <!-- <h1 class="h3">rafay</h1> -->
+    </footer>
+
 </body>
+
 </html>
