box shadow apdate

--- a/index.html
+++ b/index.html
@@ -303,10 +303,12 @@
 
 
     <footer>
-        <h1 class="h2">This is my all projects <a href="https://abdul-rafaycodeder.github.io/simpal_html_CV_3/">HTML-CV</a> <a href="https://abdul-rafaycodeder.github.io/simple-EV-scooter-website/">HTML - Multiple pages website</a> <a href="https://abdul-rafaycodeder.github.io/HTML-CSS-Portfolio-Website-main-1/">HTML_CSS Portfolio Website</a> <a href="https://rafay-website.surge.sh/">rafay-postfolio-Website</a> </h1>
+        <h1 class="h2">  <strong>This is my all projects </strong> : <a href="https://abdul-rafaycodeder.github.io/simpal_html_CV_3/">HTML-CV</a> : <a href="https://abdul-rafaycodeder.github.io/simple-EV-scooter-website/">HTML - Multiple pages website</a> : <a href="https://abdul-rafaycodeder.github.io/HTML-CSS-Portfolio-Website-main-1/">HTML_CSS Portfolio Website</a> : <a href="https://rafay-website.surge.sh/">rafay-postfolio-Website</a> </h1>
 
         <!-- <h1 class="h3">rafay</h1> -->
     </footer>
+
+
 
 </body>
 
